<resources>
    <string name="app_name">Sorocaba | O Guia Definitivo</string>
    <string name="sorocaba_intro">
        "Sorocaba é um município brasileiro da Região Metropolitana de Sorocaba, da Mesorregião "
        "Macro Metropolitana Paulista e da Microrregião de Sorocaba, no estado de São Paulo. "
        "É a quarta mais populosa do interior de São Paulo (precedida por Campinas, São José dos "
        "Campos e Ribeirão Preto) e a mais populosa da região sul paulista, sendo, portanto, "
        "uma capital regional. Possui uma área de 450,38 km².\n\n"
        "A cidade localiza-se a 87 km de distância da capital do Estado. As principais rodovias "
        "são a Castelo Branco (SP-280) e Raposo Tavares (SP-270). É atravessada pelo Rio Sorocaba, "
        "afluente da margem esquerda do Rio Tietê.\n\n"
        "Sorocaba apresenta um clima subtropical, temperado. Durante o verão, os dias são bastante "
        "quentes e as noites as temperaturas são suaves. O inverno é ameno, sendo Julho o mês mais "
        "frio e o mais quente Fevereiro.\n\n"
        "A cidade é considerada uma das mais sustentáveis do Brasil, e conta com 21 parques municipais.\n\n"

        "A Região Metropolitana de Sorocaba é composta por 26 municípios que somam aproximadamente "
        "2,06 milhões de habitantes, sendo a quarta maior do estado, "
        "depois da Região Metropolitana de São Paulo, da Região Metropolitana de Campinas e da "
        "Região Metropolitana do Vale do Paraíba e Litoral Norte.\n\n"

        "O Aeroporto de Sorocaba é considerado o aeroporto executivo mais movimentado da América do Sul, recebendo mais de 200 "
        "voos por dia. \n\n"

        "O município conta com cento e seis quilômetros de ciclovias criadas nas "
        "avenidas principais da cidade, sendo possível atravessá-la somente utilizando-se bicicletas "
        "como meio de transporte. Complementando este projeto, Sorocaba conta desde 2012 com um "
        "sistema de bicicletas públicas, denominado Integrabike, semelhante ao das cidades europeias "
        "de Barcelona, Lisboa e Paris. Possui a segunda maior malha cicloviária do Brasil, "
        "atrás apenas do Rio de Janeiro.\n\n"

        "A cidade é um importante polo industrial do estado de São Paulo e do Brasil, sendo que "
        "sua produção industrial chega a mais de 120 países, atingindo um PIB acima dos R$ 32 bilhões,"
        " o décimo nono maior do país. As principais bases de sua economia são os setores de indústria,"
        " comércio e serviços, com mais 22 mil empresas instaladas, sendo mais de duas mil delas "
        "indústrias. \n\nAs áreas produtivas de Sorocaba e Campinas foram as principais responsáveis "
        "pela descentralização industrial da região metropolitana de São Paulo entre os anos de 2000 a 2010."</string>
    <string name="action_settings">Configurações</string>
    <string name="banner_ad_unit_TESTE" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="parques_e_pracas">Parques e Praças</string>
    <string name="cultura_e_entretenimento">Cultura e Entretenimento</string>
    <string name="monumentos_e_locais_historicos">Monumentos e Locais Históricos</string>
    <string name="teatro_arena_name">"Teatro de Arena"</string>
    <string name="teatro_arena_small_desc">"O Teatro de Arena anexo ao Teatro Municipal Teotônio Vilela."</string>
    <string name="teatro_arena_full_desc">
        "O Teatro de Arena fica localizado ao lado do Teatro Municipal " 
        "Teotônio Vilela com área externa, o qual está submerso a cinco metros abaixo do lago que circunda o complexo."</string>
    <string name="teatro_arena_address" translatable="false">"Av. Eng. Carlos Reinaldo Mendes, s/n - Alto da Boa Vista\n\n"
        "(15) 3238 2222</string>
    <string name="tmtv_name">Teatro Municipal Teotônio Vilela</string>
    <string name="tmtv_small_desc">Teatro Municipal Teotônio Vilela (TMTV)</string>
    <string name="tmtv_full_desc">"Inaugurado em 29 de janeiro de 1983, o Teatro Municipal conta com uma "
        "sala de espetáculos em estilo convencional para mais de 400 pessoas, cuja dimensão do palco "
        "é: 12mX6m e 10m de profundidade, além de possuir 5 camarins individuais e 2 coletivos, "
        "cerca de 10 salas de ensaio e espaços especialmente criados para montagens de cenários e iluminação. "
        "A área de construção é de 4500m2, na qual foram usados cerca de 3000m3 de concreto e 208 mil "
        "quilogramas de aço, tendo sido escavados cerca de 5000m3 de rocha. A edificação ainda conta com um "
        "Teatro de Arena, em sua área externa, o qual está submerso a cinco metros abaixo do lago que circunda "
        "o complexo. Entre 2014 e 2015, o Teatro Municipal Teotônio Vilela, passou, por um processo de melhorias, "
        "com compra de novos equipamentos e mobiliário, além reforma em sua infraestrutura. Atualmente o Teatro "
        "Teotônio Vilela, conta com 414 lugares (sendo 4 para obesos e 4 para cadeirantes) distribuídos em "
        "plateia geral e um elegante foyer para a recepção dos espectadores e equipamentos cênicos de última geração."</string>
    <string name="tmtv_address" translatable="false">Av. Eng. Carlos Reinaldo Mendes, s/n - Alto da Boa Vista   (15) 3238 2222</string>
    <string name="gabinete_name">Gabinete de Leitura Sorocabano</string>
    <string name="gabinete_smalldesc">Umas das casas de cultura mais importantes do Brasil</string>
    <string name="gabinete_address" translatable="false">Rua São Bento - Praça Coronel Fernando Prestes, 21 – Centro</string>
    <string name="gabinete_fulldescr">"Considerado hoje um dos principais acervos do País, com mais de 50 mil títulos entre jornais, livros, "
        "documentos, fotos e até papiro. Além de jornais cujos exemplares só se encontram no Gabinete, livros datados até de "
        "1600 e nas mais diversas línguas, outros folheados a ouro. Há ainda outras preciosidades, como uma série de "
        "dois retratos do Imperador Dom Pedro ll pintados pelo inglês Stuart. Além do que está em Sorocaba, há um outro "
        "retrato que consta do acervo do Museu Imperial, no Rio de Janeiro."</string>
    <string name="sesc_name" translatable="false">SESC Sorocaba</string>
    <string name="sesc_smalldesc">Programas esportivos, educacionais, culturais e de saúde</string>
    <string name="sesc_fulldesc">"Inauguração: 1/9/2012\n" 
    "arquiteto responsável: Sérgio Teperman\n" 
    "área do terreno: 12.099,00 m²\n" 
    "área construída total: 29.000,00 m²\n" 
    "características: Edifício composto por subsolo, térreo inferior e superior e 3 pavimentos \n\n Acessibilidade Universal\n" 
    "Espaço de Tecnologias e Artes\n" 
    "Cafeteria / Café do Teatro / Lanchonete Piscina / Lanchonete Ginásio\n" 
    "Biblioteca [livros, revistas e jornais]\n" 
    "Paraciclo [78 vagas]\n" 
    "Central de Atendimento [5 postos de atendimento e 2 postos de pré-atendimento]\n" 
    "Espaço de Brincar Interno e Externo\n" 
    "Fraldário\n" 
    "Vestiário Familiar\n" 
    "Salas de Práticas Corporais e Ginástica Multifuncional\n" 
    "Ginásio Poliesportivo Coberto\n" 
    "Parque Aquático [piscinas recreativa, infantil e para prática de hidroginástica, descobertas e climatizadas e solário]\n" 
    "Campo de futebol recreativo em grama sintética\n" 
    "Vestiário\n" 
    "Estacionamento [209 vagas]\n" 
    "Loja SESC\n" 
    "4 consultórios odontológicos\n" 
    "Teatro [275 lugares]\n" 
    "Anfiteatro [475 lugares]\n" 
    "2 Salas Multiuso\n" 
    "Sala de Oficinas \n" 
    "Área de Exposição\n"
        "Convivência" </string>
    <string name="sesc_address" translatable="false">"Rua Barão de Piratininga, 555 - Jardim Faculdade\n\n(15) 3332 9933"</string>
    <string name="sesi_name">SESI Sorocaba / Teatro SESI – Sorocaba</string>
    <string name="sesi_smalldesc">Serviço Social da Indústria</string>
    <string name="sesi_fulldesc">"O Serviço Social da Indústria é uma entidade de direito privado, nos termos da lei civil, "
        "estruturada em base federativa para prestar assistência social aos trabalhadores industriais e de atividades "
        "assemelhadas em todo o país.\n"
        "\n"
        "O SESI exerce papel fundamental no desenvolvimento social brasileiro, colaborando efetivamente com a melhoria "
        "da qualidade de vida do trabalhador da indústria, seus familiares e comunidade em geral por meio de seus "
        "serviços nos campos da educação, saúde, lazer e esporte, cultura, alimentação e outros.\n"
        "\n"
        "É, também, parceiro das empresas, fornecendo apoio ativo na implantação e desenvolvimento de projetos de "
        "benefícios sociais para funcionários. \n\n "
        "O Centro de Atividades Senador José Ermírio de Moraes | SESI Sorocaba iniciou suas atividades em 1969, "
        "através de convênio firmado com a Prefeitura Municipal. A unidade oferece soluções para as empresas "
        "industriais brasileiras por meio de uma rede integrada, que engloba atividades de educação, "
        "segurança e saúde do trabalho, cultura e qualidade de vida."</string>
    <string name="sesi_address" translatable="false">Rua Duque de Caxias, 494 - Mangal  (15) 3388 0444</string>
    <string name="macs_name">MACS – Museu de Arte Contemporânea de Sorocaba</string>
    <string name="macs_smalldesc">Um espaço plural, cultural e educativo criado especialmente para você!</string>
    <string name="macs_fulldesc">"O MACS é um museu privado gerido por pessoas da sociedade civil, entre eles empresários, "
        "artistas, educadores, intelectuais e produtores culturais. A Oscip foi fundada em 2004 com o objetivo de criar "
        "e administrar um museu de arte contemporânea na cidade de Sorocaba.\n\n"
        "É uma instituição cultural eminentemente artística e educativa, espaço dinâmico e plural que prioriza a difusão "
        "das artes visuais. Democrática, aberta e acessível a todas as camadas da população e seu acervo tem foco na "
        "arte contemporânea brasileira.\n"
        "\n"
        "O principal objetivo do MACS é ser uma instituição cultural de excelência, com visão prospectiva, e "
        "capaz de operar no mesmo nível de qualidade das mais destacadas instituições congêneres do país. Sua programação "
        "tem forte preocupação educativa e abarca as mais variadas tendências artísticas e contemporâneas."</string>
    <string name="macs_address">Av. Dr. Afonso Vergueiro, 280, Centro  CEP 18035–370 – Sorocaba-SP  Telefone: 55 15 3233-1692</string>
    <string name="oficina_name">Oficina Cultural Grande Otelo</string>
    <string name="oficina_smalldesc">Espaços Culturais do Governo de São Paulo.</string>
    <string name="oficina_fulldesc">"As Oficinas Culturais do Estado de São Paulo são espaços culturais do Governo de São Paulo "
        "administrados em parceria com a Poiesis – Instituto de Apoio à Cultura, Língua e Literatura.\n"
        "\n"
        "A Oficina Cultural Grande Otelo, instalada no antigo prédio do Fórum Municipal e inaugurada em abril de 1994, "
        "em Sorocaba, leva o nome do ator cômico Grande Otelo (Sebastião Bernardes de Souza Prata), famoso pela "
        "parceria com Oscarito na época de ouro das chanchadas."</string>
    <string name="item_name">Item Name</string>
    <string name="item_description">Item Description</string>
    <string name="fotos_do_local">Fotos do local:</string>
    <string name="clique_sobre_a_imagem_para_visualizar_mais_fotos_do_local">(Clique sobre a imagem para visualizar mais fotos do local)</string>
    <string name="descricao_do_local">Descrição do Local:</string>
    <string name="full_description">Full Description</string>
    <string name="endereco">Endereço:</string>
    <string name="localizar_no_google_maps">Localizar no Google Maps</string>
</resources>