<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
xmlns:ads="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context="br.com.ddmsoftware.sorocabaguide.DetailsActivity"
tools:showIn="@layout/activity_details">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvDetails_ItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/lightBlue"
        android:textSize="25sp"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginEnd="@dimen/text_margin"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/item_name" />

    <TextView
        android:id="@+id/tvDetails_ItemDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginEnd="@dimen/text_margin"
        android:layout_marginBottom="5dp"
        android:text="@string/item_description" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="@dimen/text_margin"
        android:padding="@dimen/text_margin"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/text_margin"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/lightBlue"
                android:text="@string/fotos_do_local" />

            <TextView
                android:id="@+id/tvDetails_Hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:textSize="12sp"
                android:textStyle="italic"
                android:text="@string/clique_sobre_a_imagem_para_visualizar_mais_fotos_do_local" />


            <ImageView
                android:id="@+id/imgDetails_ItemPicture"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/campolim"
                android:contentDescription="@string/descricao_do_local" />




        </LinearLayout>

    </android.support.v7.widget.CardView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewDetails1"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_TESTE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="@dimen/text_margin"
        android:padding="@dimen/text_margin"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/text_margin"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:textStyle="bold"
                android:textColor="@color/lightBlue"
                android:text="@string/descricao_do_local" />


            <TextView
                android:id="@+id/tvDetails_FullDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_description" />

        </LinearLayout>

    </android.support.v7.widget.CardView>



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="@dimen/text_margin"
        android:padding="@dimen/text_margin"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/text_margin"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/lightBlue"
                android:layout_marginBottom="@dimen/text_margin"
                android:text="@string/endereco" />

            <TextView
                android:id="@+id/tvDetails_Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/endereco" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/btnMaps"
                android:drawableStart="@drawable/ic_map_black_24dp"
                android:text="@string/localizar_no_google_maps"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewDetails2"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_TESTE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

</LinearLayout>

</android.support.v4.widget.NestedScrollView>



