<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context="br.com.ddmsoftware.sorocabaguide.MainActivity">

    <Button
        android:id="@+id/btnParques"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5sp"
        android:layout_weight="1"
        android:background="@drawable/bg_button_parks2"
        android:drawableStart="@drawable/ic_parks"
        android:elevation="5sp"
        android:gravity="start|center"
        android:padding="10dp"
        android:text="@string/parques_e_pracas"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:targetApi="lollipop" />


    <Button
        android:id="@+id/btnCulturaEntretenimento"
        android:text="@string/cultura_e_entretenimento"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="5sp"
        android:padding="10dp"
        android:elevation="5sp"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:gravity="start|center"
        android:background="@drawable/bg_button_culture2"
        android:drawableStart="@drawable/ic_local_city"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/btnHistoricalPlaces"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="5sp"
        android:padding="10dp"
        android:elevation="10dp"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:gravity="start|center"
        android:background="@drawable/bg_button_historicalplaces"
        android:drawableStart="@drawable/ic_places"
        android:text="@string/monumentos_e_locais_historicos"/>

<!--
    <Button
        android:id="@+id/btnCompras"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="5sp"
        android:padding="10dp"
        android:elevation="10dp"
        android:textColor="#fff"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:gravity="start|center"
        android:background="@drawable/bg_button_compras"
        android:drawableLeft="@drawable/ic_purchase"
        android:text="@string/compras"/>
-->
    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewCategory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

</LinearLayout>
